refactor graphics module

--- a/sdlproject.cbp
+++ b/sdlproject.cbp
@@ -33,6 +33,7 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="background.h" />
+		<Unit filename="ball.h" />
 		<Unit filename="defs.h" />
 		<Unit filename="exception.h" />
 		<Unit filename="main.cpp" />
