refactor graphics module

--- a/sdlproject.cbp
+++ b/sdlproject.cbp
@@ -38,14 +38,22 @@
 		<Unit filename="ball.h" />
 		<Unit filename="block.cpp" />
 		<Unit filename="block.h" />
+		<Unit filename="button.cpp" />
+		<Unit filename="button.h" />
 		<Unit filename="defs.h" />
 		<Unit filename="energy.cpp" />
 		<Unit filename="energy.h" />
 		<Unit filename="exception.h" />
+		<Unit filename="font.cpp" />
+		<Unit filename="font.h" />
 		<Unit filename="game.h" />
 		<Unit filename="lever.cpp" />
 		<Unit filename="lever.h" />
+		<Unit filename="lost.cpp" />
+		<Unit filename="lost.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="menu.cpp" />
+		<Unit filename="menu.h" />
 		<Unit filename="texture.cpp" />
 		<Unit filename="texture.h" />
 		<Unit filename="window.cpp" />
