--- a/sdlproject.cbp
+++ b/sdlproject.cbp
@@ -54,6 +54,8 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="menu.cpp" />
 		<Unit filename="menu.h" />
+		<Unit filename="score.cpp" />
+		<Unit filename="score.h" />
 		<Unit filename="texture.cpp" />
 		<Unit filename="texture.h" />
 		<Unit filename="window.cpp" />
